--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -13,21 +13,24 @@
 
 <body>
     <main>
-        <h3 class="banner">Search By Title or Author</h3>
-        <form action="/searches" method="post" class="searchForm">
-            <div>
-                <input id="book-search" type="text" name="searchText" placeholder="Enter a title or author" required><br>
-                <label class="radio-label" for="author">Author</label>
-            </div>
-            <div>
-                <input class="radio-button" type="radio" name="searchType" value="author"><br>
-                <label class="radio-label" for="title">Title</label>
-            </div>
-            <div>
-                <input class="radio-button" type="radio" name="searchType" value="title"><br>
-                <button type="submit">Search the Google Books API</button>
-            </div>
-        </form>
+        <div class = 'container'>
+            <h3 class="banner">Search By Title or Author</h3>
+            <form action="/searches" method="post" class="searchForm">
+                <div>
+                    <input id="book-search" type="text" name="searchText" placeholder="Enter a title or author" required><br>
+                    <label class="radio-label" for="author">Author</label>
+                </div>
+                <div>
+                    <input class="radio-button" type="radio" name="searchType" value="author"><br>
+                    <label class="radio-label" for="title">Title</label>
+                </div>
+                <div>
+                    <input class="radio-button" type="radio" name="searchType" value="title"><br>
+                    <button type="submit">Search the Google Books API</button>
+                </div>
+            </form>
+        </div>
+        
     </main>
 </body>
 
