complete two cards

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,7 +11,17 @@
 </head>
 <body>
     <main>
-        <h2>Hello World</h2>
+        <p> <%= books.length %>Books available</p>
+                <ul id="bookshelf">
+                    <% books.forEach(book => { %>
+                        <li class="new-book">
+                            <img src=<%= book.image_url %>>
+                            <h3><%= book.title %></h3>
+                            <h4><%= book.author %></h4>
+                            <a href="/books/<%=book.id%>">View Details</a>
+                        </li>
+                    <% }) %>
+                </ul>
     </main>
 </body>
 </html>
